corrected photo and welcome component spacing

--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -13,6 +13,10 @@ h4 {
     text-align: center;
 }
 
+p {
+    line-height: 1.75;
+}
+
 .briefBio {
     font-size: 20px;
     margin-left: 10vw;
